# odysseus

./: .env.example  .gitignore  ACKNOWLEDGMENTS.md  CONTRIBUTING.md  Dockerfile  README.md  app.py  build-macos-app.sh  docker-compose.gpu-amd.yml  docker-compose.gpu-nvidia.yml  docker-compose.yml  launch-windows.ps1  package-lock.json  package.json  pyproject.toml  setup.py  start-macos.sh
.archive/: requirements.txt
.github/workflows/: ci.yml
.trunk/: trunk.yaml
companion/: pairing.py  routes.py
core/: auth.py  constants.py  database.py  middleware.py  models.py  platform_compat.py  session_manager.py
docker/: entrypoint.sh
docs/: index.html  security-ci.md
mcp_servers/: email_server.py  image_gen_server.py
routes/: _validators.py  admin_wipe_routes.py  api_token_routes.py  assistant_routes.py  auth_routes.py  backup_routes.py  calendar_routes.py  chat_helpers.py  chat_routes.py  chatgpt_subscription_routes.py  cleanup_routes.py  codex_routes.py  compare_routes.py  contacts_routes.py  cookbook_bash_builders.py  cookbook_helpers.py  cookbook_output.py  cookbook_ps1_builders.py  cookbook_routes.py  cookbook_utils.py  copilot_routes.py  device_flow.py  diagnostics_routes.py  document_helpers.py  document_routes.py  editor_draft_routes.py  email_helpers.py  email_pollers.py  email_routes.py  embedding_routes.py  emoji_routes.py  gallery_helpers.py  gallery_routes.py  history_routes.py  hwfit_routes.py  mcp_routes.py  memory_routes.py  model_routes.py  note_routes.py  personal_routes.py  (+15 more)
scripts/: add_hwfit_models.py  claim_ownerless.py  diffusion_server.py  index_documents.py  migrate_faiss_to_chroma.py  odysseus  odysseus-calendar  odysseus-cookbook  odysseus-logs  odysseus-mail  odysseus-notes  odysseus-preset
src/: active_document.py  agent_loop.py  agent_runs.py  agent_tools.py  ai_interaction.py  api_key_manager.py  app_initializer.py  assistant_log.py  auth_helpers.py  bg_jobs.py  bg_monitor.py  builtin_actions.py  builtin_mcp.py  caldav_sync.py  caldav_writeback.py  chat_handler.py  chat_helpers.py  chat_processor.py  chatgpt_subscription.py  chroma_client.py  cleanup_service.py  config.py  constants.py  context_compactor.py  cookbook_serve_lifecycle.py  copilot.py  deep_research.py  document_actions.py  document_processor.py  embedding_lanes.py  embeddings.py  endpoint_resolver.py  event_bus.py  generated_images.py  integrations.py  llm_core.py  markitdown_runtime.py  mcp_manager.py  mcp_oauth.py  memory.py  (+37 more)
static/: app.js  index.html  style.css
static/js/: chat.js  (+27 more)
tests/: LAYOUT_INVENTORY.md  README.md  TESTING_STANDARD.md  _taxonomy.py  conftest.py  run_focus.py  test_active_document_clear.py  test_admin_device_flow_static.py  test_agent_loop_tool_output_truncation.py  test_agent_rounds_exhausted.py  test_agent_tools_truncate_nonstring.py  test_api_chat_security.py  test_api_key_manager_resilience.py  test_api_token_routes.py  test_api_token_user_route_gate.py  test_auth_config_lock_concurrency.py  test_auth_event_loop.py  test_auth_regressions.py  test_aux_llm_owner_scope.py  test_backup_import_skills_dedup.py  test_blind_compare_redaction.py  test_build_user_content_pdf_marker.py  test_builtin_actions_owner_scope.py  test_builtin_mcp_npx_cache.py  test_cache_affinity_local_only.py  test_caldav_google_principal_url.py  test_caldav_prune_parse_failure.py  test_caldav_url_hardening.py  test_caldav_writeback.py  test_calendar_batch_events.py  test_calendar_owner_scope.py  test_calendar_rrule.py  test_calendar_update_event_tz.py  test_chat_helpers.py  test_chat_route_tool_policy.py  test_chat_stream_scope.py  test_chat_tool_screenshot_xss.py  test_chat_upload_limit_config.py  test_chatgpt_subscription_routes.py  test_classify_events_memory_text.py  (+169 more)
(+54 files in other folders)
